# Codex19

./: .coveragerc  .gitignore  01_bootload.md  02_heuristics.md  03_source-evaluation.md  04_tools.md  Bootload.md  LICENSE  LLM-Integration-Blueprint.md  README.md  emotional-intelligence.md  ethics.md  heuristics.md  historical-parallels  main.py  mkdocs.yml  pyproject.toml  source-evaluation.md  threat-models.md  tools.md
codex19/: __init__.py  chain.py  cite.py  confidence.py  escalation.py  prompt_builder.py
docs/: 02_heuristics.md  03_source-evaluation.md  04_tools.md  ethics.md  references.yaml
examples/case_studies/: Critical-Infrastructure-Threat.ipynb  Election-Misinformation.ipynb
prompt/: safety_summary.txt
src/codex19/: __init__.py  emotion.py
tests/: test_chain.py  test_cite.py  test_confidence.py  test_emotion.py  test_escalation.py  test_links.py  test_prompt_builder.py  test_version.py
