[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex19"
version = "0.1.0"
description = "Investigative AI bootloader and heuristics"
authors = [{name = "Codex"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "pytest-cov",
    "nbmake",
]

[tool.pytest.ini_options]
addopts = "--cov=codex19 --cov-report=term-missing --cov-fail-under=85 --nbmake examples/case_studies tests"

[tool.setuptools.packages.find]
where = ["src"]
