[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex19"
version = "0.1.0"
description = "Investigative AI bootloader and heuristics"
authors = [{name = "Codex"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "rich",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "yamllint",
    "mkdocs",
    "mkdocs-macros-plugin",
]

[tool.setuptools.packages.find]
where = ["src"]
